metadata/force-app/main/default/objects/CustomName_bArYV__c/CustomName_bArYV__c.object-meta.xml
<CustomObject>
    <description>Description_WUEvO</description>
    <label>CustomLabel_hyEQX</label>
    <nameField>
        <label>CustomLabel_hyEQX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_hyEQXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>