metadata/force-app/main/default/objects/CustomName_bArYV__c/fields/CustomField_uLYNK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_uLYNK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmlHWV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>