metadata/force-app/main/default/objects/CustomName_bArYV__c/fields/CustomField_ZtmQf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZtmQf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBRLQi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>